Spadefoot link update & resume tweak

--- a/_layouts/chi-lith.html
+++ b/_layouts/chi-lith.html
@@ -4,13 +4,13 @@ layout: spadefoot
 <div class="mlis-submenu">
   <div class="submenu-title">{{ page.title | escape }}</div>
   <div class="submenu-link lith-link">
-    <a href="{{ '/mlis/chi/thelithograph' | relative_url }}">the lithograph</a>
+    <a href="{{ '/mlis/spadefoot/thelithograph' | relative_url }}">the lithograph</a>
     <div> / </div>
-    <a href="{{ '/mlis/chi/views' | relative_url }}">views</a>
+    <a href="{{ '/mlis/spadefoot/views' | relative_url }}">views</a>
     <div> / </div>
-    <a href="{{ '/mlis/chi/aroundtheworld' | relative_url }}">around the world</a>
+    <a href="{{ '/mlis/spadefoot/aroundtheworld' | relative_url }}">around the world</a>
     <div> / </div>
-    <a href="{{ 'mlis/chi/timeline' | relative_url }}">timeline</a>
+    <a href="{{ 'mlis/spadefoot/timeline' | relative_url }}">timeline</a>
   </div>
 </div>
 
