--- a/_layouts/chi-toad.html
+++ b/_layouts/chi-toad.html
@@ -4,11 +4,11 @@ layout: spadefoot
 <div class="mlis-submenu">
   <div class="submenu-title">{{ page.title | escape }}</div>
   <div class="submenu-link toad-link">
-  <a href="{{ '/mlis/chi/thetoad' | relative_url }}">the toad</a>
+  <a href="{{ '/mlis/spadefoot/thetoad' | relative_url }}">the toad</a>
   <div> / </div>
-  <a href="{{ '/mlis/chi/names' | relative_url }}">names</a>
+  <a href="{{ '/mlis/spadefoot/names' | relative_url }}">names</a>
   <div> / </div>
-  <a href="{{ '/mlis/chi/faces' | relative_url }}">faces</a>
+  <a href="{{ '/mlis/spadefoot/faces' | relative_url }}">faces</a>
   </div>
 </div>
 
