Metadata Schema Update

--- a/_layouts/metadata.html
+++ b/_layouts/metadata.html
@@ -5,20 +5,20 @@ layout: default
 
 <div class="spadefoot-page">
 
-<p class="spadefoot-credit">Project for <a href="{{ 'mlis/portfolio/home' | relative_url }}">Kent State MLIS Program</a> - Metadata Architecture and Implementation Fall 2019</p>
+<p class="spadefoot-credit">Project for <a href="{{ 'mlis' | relative_url }}">Kent State MLIS Program</a> - Metadata Architecture and Implementation Fall 2019</p>
 
 <div class="spadefoot-header">
   <div class="spadefoot-title"><a href="{{ "/mlis/metadata/home" | relative_url }}">Secondhand CDs</a></div>
   <div class="spadefoot-links">
     <a href="{{ "/mlis/metadata/home" | relative_url }}">home</a>
     <div> / </div>
-    <a href="{{ "/mlis/metadata/specifications" | relative_url }}">specification</a>
+    <a href="{{ "/mlis/metadata/schema" | relative_url }}">schema</a>
     <div> / </div>
     <a href="{{ "/mlis/metadata/records" | relative_url }}">records</a>
   </div>
 </div>
 
-<div class="metadata-content">
+<div class="spadefoot-content">
 {{ content }}
 </div>
 
