--- a/_sass/kmr/_spadefoot.scss
+++ b/_sass/kmr/_spadefoot.scss
@@ -12,7 +12,7 @@
   @media ($phone) {width: 95%;}
 }
 
-.spadefoot-content, .metadata-content {
+.spadefoot-content {
   display: flex;
   flex-direction: column;
 }
