--- a/_layouts/scd.html
+++ b/_layouts/scd.html
@@ -1,30 +1,33 @@
 ---
 layout: metadata
 ---
+<div id="scd-specs">
 
-<table id="scd-specs">
-  <tr><th>{{ page.title | escape }}</th></tr>
-  <tr>
-    <td>Label</td>
-    <td>{{ page.scd-label | escape }}</td>
-  </tr>
-  <tr>
-    <td>Identifier</td>
-    <td>
-      <a href="{{ page.permalink | escape }}">
-        {{ '' | absolute_url }}{{ page.permalink | remove_first: "/" }}
-      </a>
-    </td>
-  </tr>
-  <tr>
-    <td>Definition</td>
-    <td>{{ page.scd-def | escape }}</td>
-  </tr>
-  <tr>
-    <td>Implementation</td>
-    <td>{{ page.scd-imp | escape }}</td>
-  </tr>
-  {{ content }}
-</table>
+  <div id="scd-table-title">{{ page.title | escape }}</div>
 
-<p>Back to <a href="{{ '/mlis/metadata/schema#elements' | relative_url }}" >Specifications</a></p>
+  <table id="scd-table">
+    <tr><th colspan="2"></th></tr>
+    <tr>
+      <td>Label</td>
+      <td>{{ page.scd-label | escape }}</td>
+    </tr>
+    <tr>
+      <td>Identifier</td>
+      <td>
+        <a href="{{ page.permalink | escape }}">{{ '' | absolute_url }}{{ page.permalink | remove_first: "/" }}</a>
+      </td>
+    </tr>
+    <tr>
+      <td>Definition</td>
+      <td>{{ page.scd-def | escape }}</td>
+    </tr>
+    <tr>
+      <td>Implementation</td>
+      <td>{{ page.scd-imp | escape }}</td>
+    </tr>
+    {{ content }}
+  </table>
+
+  <p id="scd-back"><em>Back to <a href="{{ '/mlis/metadata/schema#elements' | relative_url }}" >Specifications</a></em></p>
+
+</div>
