--- a/_sass/kmr/_metadata.scss
+++ b/_sass/kmr/_metadata.scss
@@ -25,17 +25,15 @@
 * Schema
 **/
 
-#scd-schema {
-  margin-top: 20px;
+#scd-schema, #scd-specs {
   margin-left: auto;
   margin-right: auto;
-  @media (min-width: 1301px) {width: 900px;}
-  @media (max-width: 1300px) {width: 800px;}
-  @media (max-width: 750px) {width: 90%;}
-  @media ($phone) {width: 95%;}
+  @media (min-width: 1101px) {width: 900px;}
+  @media (max-width: 1100px) {width: 100%;}
 }
 
 #scd-schema {
+  margin-top: 20px;
   h1 {
     border-bottom: black 2px solid;
     font-size: 28px;
@@ -60,6 +58,7 @@
     margin-bottom: 20px;
     border-top: 1px black solid;
   }
+  ul {list-style-type: none;}
 }
 
 /**
@@ -92,12 +91,44 @@
 * Specifications
 **/
 
-#scd-specs .highlight {
-  margin: 0px;
-  padding: 5px;
+#scd-specs {
+  margin-bottom: 20px;
 }
 
-#scd-specs td {
-  margin-top: 10px;
-  font-size: 15px;
+#scd-table .highlight {
+  margin: 0px;
+  padding: 5px;
+  pre {white-space: pre-wrap}
+}
+
+#scd-table-title {
+  font-size: 18px;
+  font-weight: bold;
+  border-bottom: 2px solid black;
+  padding-bottom: 2px;
+}
+
+#scd-back {text-align: right;}
+
+#scd-table {
+  width: 100%;
+  border-collapse: collapse;
+  tr:nth-child(even) {background-color: #f2f2f2;}
+  tr td:nth-of-type(2) {padding-right: 8px;}
+  tr td:first-of-type {
+    font-weight: bold;
+    padding-right: 15px;
+    vertical-align: top;
+    width: 70px;
+  }
+  td, p {
+    padding-bottom: 8px;
+    font-size: 15px;
+    margin-top: 0px;
+  }
+  td {
+    padding-top: 8px;
+    padding-left: 8px;
+  }
+  p {padding-top: 0px;}
 }
