--- a/_sass/kmr.scss
+++ b/_sass/kmr.scss
@@ -33,7 +33,8 @@ $wrap-mini: 80%;
 $desktop: "min-width: 1101px"; // @ screen size above 1101px
 $tablet: "max-width: 1100px"; // @ screen size below 1100px
 $phone: "max-width: 520px"; // @ screen size below 520px
-
+$galaxy: "max-width: 435px"; // @ screen size of galaxy S9
+$galaxy-above: "min-width: 436px"; // @ screen size above galaxy S9
 
 // Import partials.
 
