Update About and Title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 
     <div class="site-title">
         <a href="{{ "/" | relative_url }}">kelsey rogers</a>
-        <div>archivist. naturalist. storyteller.</div>
+        <div>curator. naturalist. librarian.</div>
     </div>
 
     <div class="nav-links">
