--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,10 +5,10 @@ layout: default
         <div class="intro-box">
             <div class="home-ribbon">
                 <div class="home-title">
-                    archivist. naturalist. storyteller.
+                    curator. naturalist. librarian.
                 </div>
                 <div class="home-desc">
-                  I'm Kelsey Rogers. I love to tell stories. Let me help you tell yours.
+                  I'm Kelsey Rogers. I believe every object has a story to tell, every creature has a history. Let me help you bring those stories to life.
                 </div>
             </div>
         </div>
