--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div id="nav-header">
 
     <div class="site-title">
-        <a href="{{ "/" | relative_url }}">kelsey rogers</a>
+        <a href="{{ "/" | relative_url }}">kelsey marie rogers</a>
         <div>curator. naturalist. librarian.</div>
     </div>
 
