--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
                     curator. naturalist. librarian.
                 </div>
                 <div class="home-desc">
-                  I'm Kelsey Rogers. I believe every object has a story to tell, every creature has a history. Let me help you bring those stories to life.
+                  I'm Kelsey Marie Rogers. I believe every object has a story to tell, every creature has a history. Let me help you bring those stories to life.
                 </div>
             </div>
         </div>
