--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
         <div class="intro-box">
             <div class="home-ribbon">
                 <div class="home-title">
-                    curator. naturalist. librarian.
+                    naturalist. librarian. designer.
                 </div>
                 <div class="home-desc">
                   I'm Kelsey Marie Rogers. I believe every object has a story to tell, every creature has a history. Let me help you bring those stories to life.
