--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 
     <div class="site-title">
         <a href="{{ "/" | relative_url }}">kelsey marie rogers</a>
-        <div>curator. naturalist. librarian.</div>
+        <div>naturalist. librarian. designer.</div>
     </div>
 
     <div class="nav-links">
