--- a/_sass/kmr.scss
+++ b/_sass/kmr.scss
@@ -49,5 +49,6 @@ $galaxy-above: "min-width: 436px"; // @ screen size above galaxy S9
   "kmr/metadata",
   "kmr/practicum",
   "kmr/mlis",
-  "kmr/blog"
+  "kmr/blog",
+  "kmr/portfolio"
 ;
