--- a/_sass/kmr/_contact.scss
+++ b/_sass/kmr/_contact.scss
@@ -1,26 +1,3 @@
 /**
-* Site Contact Footer
+* Site Contact
 */
-#contact {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  font-family: $base-font-family;
-  label {
-    display: block;
-  }
-  input, textarea {
-    font-size: 15px;
-    padding: 5px;
-  }
-  input {
-    min-width: 400px;
-  }
-  textarea {
-    margin-bottom: 15px;
-    min-height: 100px;
-    min-width: 600px;
-  }
-  button h4{
-    margin-top: 0px;
-  }
-}
