Header & Contact Update

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,8 @@
     </div>
 
     <div class="nav-links">
+      <a href="{{ "/" | relative_url }}">home</a>
+      <div> / </div>
       <a href="{{ "/about/" | relative_url }}">about</a>
       <div> / </div>
       <a href="{{ "/resume/" | relative_url }}">resume</a>
